--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "formidable": "^1.2.2",
-    "mv": "^2.1.1"
+    "mv": "^2.1.1",
+    "uuid": "^8.3.0"
   }
 }
